YELPCAMP TO FOODCRAVINGS MIGRATION (Major changes are replacing the words[ 'campgrounds', 'comments'] with ['restaurants', 'reviews'])
    This project started out with the help of tutorials (which was for making a camping website called 'yelpcamp') and I decided to keep on adding features (some from tutorials some on my own) that it became a functional MVP. But my original aim was to create a restaurant reviewing clone (something like zomato).

    Given time constraints, I am not changing variable & class names - let them be same as yelcamp but the outer UI visible to end users will be showing a restaurant review website. In future, when time permite, I am planning to make a full blown transition and add a few more features like 3rd party signin, image upload for reviews etc...

--- a/yelpcamp/views/campgrounds/index.ejs
+++ b/yelpcamp/views/campgrounds/index.ejs
@@ -4,9 +4,9 @@
         <!-- Just the jumbotron part-->
         <header class="jumbotron">
             <div class=="container">
-                <h1 class="display-4"> CAMPGROUNDS PAGE </h1>
-                <p class="lead"> You can check out all campgrounds here.  </p>
-                <p> <a class="btn btn-primary btn-lg" href="/campgrounds/new"> Add New Campground </a> </p>
+                <h1 class="display-4"> RESTAURANTS PAGE </h1>
+                <p class="lead"> You can check out all restaurants here.  </p>
+                <p> <a class="btn btn-primary btn-lg" href="/campgrounds/new"> Add New Restaurant </a> </p>
             </div>
         </header>
 
