--- a/yelpcamp/views/partials/header.ejs
+++ b/yelpcamp/views/partials/header.ejs
@@ -12,11 +12,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <title> Yelpcamp !</title>
+    <title> Food Cravings! </title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">YelpCamp</a>
+        <a class="navbar-brand" href="/"> FoodCravings </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,7 +29,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/campgrounds"> Campgrounds </a>
+                    <a class="nav-link" href="/campgrounds"> Restaurants </a>
                 </li>
 
             </ul>
