--- a/yelpcamp/views/register.ejs
+++ b/yelpcamp/views/register.ejs
@@ -71,7 +71,7 @@
     <li> Set your password such that it has more than 8 eight characters, a mix of both Upper & Lower alphabets and also symbols. </li>
     <li>Else Chome may show you a warning like "A data breach on a site or app exposed your password".</li>
     <li> The warning doesn't mean that your passwords or any other accounts got hacked. 
-    <li>It means that your password isn't strong enough and it'd be safe to make it strong. <a href="https://support.google.com/chrome/thread/23534509?hl=en&msgid=23692520"> Click here </a> for more information </li>   
+    <li>It means that your password isn't strong enough and it'd be safer to make it strong. <a href="https://support.google.com/chrome/thread/23534509?hl=en&msgid=23692520"> Click here </a> for more information </li>   
     <li> <strong> NOTE:</strong> Admin Code is optional and is provided to certain users who have admin access. If you haven't been provided with one, you can still signup. </li> </h5>
 </div>
 <%- include('partials/footer.ejs') %>
