--- a/yelpcamp/public/stylesheets/landing.css
+++ b/yelpcamp/public/stylesheets/landing.css
@@ -40,25 +40,28 @@ body {
   }
 
   .slideshow li:nth-child(1) { 
-    background-image: url(http://i.imgur.com/K3mPv14.jpg) 
+    background-image: url('../coverImages/1.jpg') 
   }
   .slideshow li:nth-child(2) { 
-    background-image: url(http://i.imgur.com/SBEmFpv.jpg);
+    background-image: url('../coverImages/2.jpg');
     animation-delay: 10s; 
   }
   .slideshow li:nth-child(3) { 
-    background-image: url(http://i.imgur.com/emvhOnb.jpg);
+    background-image: url('../coverImages/3.jpg');
     animation-delay: 20s; 
   }
   .slideshow li:nth-child(4) { 
-    background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+    background-image: url('../coverImages/4.jpg');
     animation-delay: 30s; 
   }
   .slideshow li:nth-child(5) { 
-    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+    background-image: url('../coverImages/5.jpg');
     animation-delay: 40s; 
   }
-
+  .slideshow li:nth-child(5) { 
+    background-image: url('../coverImages/6.jpg');
+    animation-delay: 40s; 
+  }
   @keyframes imageAnimation { 
     0% { 
       opacity: 0; 
