--- a/yelpcamp/views/about.ejs
+++ b/yelpcamp/views/about.ejs
@@ -7,15 +7,15 @@
     <ul>        
             <li>Each user can add multiple restuarants that belong to them.</li> <br>
                 
-            <li>Each restaurants will contains a sample photo, details, approx cost, location & details of owner. </li> <br>
+            <li>Each restaurant's page will contain page a sample photo, details, approx cost, location & details of owner. </li> <br>
 
-            <li>Each user will have a profile containing basic details (like username, profile piicture, email ,bio etc) that can be accessed in their profile page. </li> <br>
+            <li>Each user will have a profile containing basic details (like Username, Profile picture, Email ,Bio etc) that can be accessed in their profile page. </li> <br>
 
             <li>Users can post a review with a rating (0 to 5) for each restaurant - an aggregate score of which will be displayed at the top.</li> <br>
 
             <li>To prevent manipulation of rating system:</li> 
                 <ul>
-                    <li> A user can't place reviews for their own restaurant. </li>
+                    <li> A user can't post a review for their own restaurant. </li>
                     <li> A user can only place one review per restaurant (however they can edit or delete &recreate their review). </li><br>
                 </ul>
             </li>
@@ -26,7 +26,7 @@
 
             <li>Users can also change their password in their profile page. </li><br>
 
-            <li>Also, there is an option to reset password if incase a user forgets their password. <br>
+            <li>Also, there is an option to reset password via email if incase a user forgets their password. <br>
             
         </ul>
     </h5>
