--- a/yelpcamp/views/campgrounds/editCamp.ejs
+++ b/yelpcamp/views/campgrounds/editCamp.ejs
@@ -1,17 +1,17 @@
 <%- include('../partials/header.ejs') %>
 
 <div class="container">
-    <h1 style="margin-left: 7.5em; margin-block-start: 2em ;"> Edit Existing Campgrounds </h1><br><br>
+    <h1 style="margin-left: 7.5em; margin-block-start: 2em ;"> Edit Existing Restaurant </h1><br><br>
     
         <form action="/campgrounds/<%= camp._id %>?_method=PUT" method="POST">
             <div style=" width:60%; margin: 0 auto;">
                 <div class="form-group">
-                    <label for="campName"> Camp Name </label>
-                    <input type="text" class="form-control" placeholder="Camp's Name" id="campName" name='campName' value="<%= camp.name %>" >
+                    <label for="campName"> Restaurant Name </label>
+                    <input type="text" class="form-control" placeholder="Restaurant's Name" id="campName" name='campName' value="<%= camp.name %>" >
                 </div>
                 <div class="form-group">
-                    <label for="campImg"> Camp Image </label>
-                    <input type="text" class="form-control" placeholder="Camp Image URL" name='campImg' id="campImg" value="<%= camp.image %>" >
+                    <label for="campImg"> Restaurant Image </label>
+                    <input type="text" class="form-control" placeholder="Restaurant Image URL" name='campImg' id="campImg" value="<%= camp.image %>" >
                 </div>
                 
                 <div class="form-group">
@@ -20,11 +20,11 @@
                     </label>
                 </div>
                 <div class="form-group">
-                    <label for="campDesc"> Camp Description </label>
-                    <textarea class="form-control"  placeholder="Describe the camp!" name='description' rows=4 value= "<%=camp.description%>" > </textarea>
+                    <label for="campDesc"> Restaurant Description </label>
+                    <textarea class="form-control"  placeholder="Describe your Restaurant!" name='description' rows=4 value= "<%=camp.description%>" > </textarea>
                 </div>
                 <div class="form-group">
-                    <label for="campDesc"> Approximate Charges( per 2 people) </label>
+                    <label for="campDesc"> Approximate Charges(per 2 people) </label>
                     <input type="number" class="form-control"  placeholder="Mention an approximate price in Rs. per session" name='campPrice' value= "<%=camp.price%>" step="1" min="0">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
