--- a/yelpcamp/views/campgrounds/newcamp.ejs
+++ b/yelpcamp/views/campgrounds/newcamp.ejs
@@ -1,31 +1,31 @@
 <%- include('../partials/header.ejs') %>
 
 <div class="container">
-    <h1 style="margin-left: 7.5em; margin-block-start: 2em ;"> Create New Campgrounds </h1><br><br>
+    <h1 style="margin-left: 7.5em; margin-block-start: 2em ;"> Add New Restaurants </h1><br><br>
     
         <form action="/campgrounds" method="POST">
             <div style=" width:60%; margin: 0 auto;">
                 <div class="form-group">
-                    <label for="campName"> Camp Name </label>
-                    <input type="text" class="form-control" placeholder="Camp's Name" id="campName" name='campName' required="true">
+                    <label for="campName"> Restaurant Name </label>
+                    <input type="text" class="form-control" placeholder="Restaurant's Name" id="campName" name='campName' required="true">
                 </div>
                 <div class="form-group">
-                    <label for="campImg"> Camp Image </label>
-                    <input type="text" class="form-control" placeholder="Camp Image URL" name='campImg' id="campImg" required="true">
+                    <label for="campImg"> Restaurant Image </label>
+                    <input type="text" class="form-control" placeholder="Restaurant Image URL" name='campImg' id="campImg" required="true">
                 </div>
 
                 <div class="form-group">
-                    <label for="location"> Camp Location </label>
+                    <label for="location"> Location </label>
                         <input class="form-control" type="text" name="location" id="location" placeholder="Address/Location. Eg: Chennai central, TamilNadu" required="true">
                     </label>
                 </div>
                 <div class="form-group">
-                    <label for="campDesc"> Camp Description </label>
-                    <textarea type="text" class="form-control"  rows=4 placeholder="Describe the camp!" rows=3 name='description'></textarea>
+                    <label for="campDesc"> Description </label>
+                    <textarea type="text" class="form-control"  rows=4 placeholder="Describe your Restaurant!" rows=3 name='description'></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="campDesc"> Approximate Charges( per 2 people) </label>
-                    <input type="number" class="form-control"  placeholder="Approx price in rs. per session" name='campPrice' required="true" step="1" min="0">
+                    <label for="campDesc"> Approximate Charges(per 2 people) </label>
+                    <input type="number" class="form-control"  placeholder="Approx price-In Rs. per 2 people" name='campPrice' required="true" step="1" min="0">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
