--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -8,7 +8,7 @@
             <p class="lead">Dining Options</p>
             <div class"list-group">
                 <li class="list-group-item active">Info 1</li>
-                <li class="list-group-item">Info 1</li>
+                <li class="list-group-item">Info 2</li>
             </div>    
             <br><br>
             <div id='map'></div>
@@ -32,7 +32,7 @@
                     <h4> <a href="" > <%= camp.name %> </a> | <span style="display: inline; font-size:medium"> AVERAGE RATING : <%= camp.avgRating %> </span> </h4>
                     <p> <%= camp.description %> </p>
                     
-                    <p> <em> Written by <a href="/users/<%= camp.author.id%>" > <%= camp.author.username %> </a> on <%= moment(camp.createdAt).tz("Asia/Kolkata").format('DD MMM YYYY') %> </em> </p>
+                    <p> <em> Added by <a href="/users/<%= camp.author.id%>" > <%= camp.author.username %> </a> on <%= moment(camp.createdAt).tz("Asia/Kolkata").format('DD MMM YYYY') %> </em> </p>
 
                     <!-- If a user is signed in AND if they are the owners then show the edit & delete buttons
                     Recall that currentUser was setup using the 1st middleware in app.js-->
@@ -80,9 +80,9 @@
                     <% }; %>
 
                     <% if(commentStatus){ %>
-                        <p> <a class ="btn btn-primary disabled" href="/campgrounds/<%= camp._id %>/comments/new"> Add New Comment </a> </p>
+                        <p> <a class ="btn btn-primary disabled" href="/campgrounds/<%= camp._id %>/comments/new"> Add New Review </a> </p>
                     <% }else{ %>
-                        <p> <a class ="btn btn-primary" href="/campgrounds/<%= camp._id %>/comments/new"> Add New Comment </a> </p>
+                        <p> <a class ="btn btn-primary" href="/campgrounds/<%= camp._id %>/comments/new"> Add New Review </a> </p>
                     <% }; %>
                 </div>
                 <hr>
