--- a/yelpcamp/views/login.ejs
+++ b/yelpcamp/views/login.ejs
@@ -1,11 +1,33 @@
 <%- include('partials/header.ejs') %>
 
-<h1> Login Page </h1>
-
+<!--
 <form action="/login" method="POST">
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
     <button> Login </button>
 </form>
+-->
+
+<div class="container">
+    <h1 style="margin-left: 11.5em; margin-block-start: 2em ;"> LOGIN </h1>
+    <br><br>
+        <form action="/login" method="POST">
+            <div style=" width:60%; margin: 0 auto;">
+                <div class="form-group">
+                    <label for="username"> Username </label>
+                    <input type="text" class="form-control" placeholder="Username" name='username' id="username" required="true">
+                </div>
+                <div class="form-group">
+                    <label for="commentText"> Password </label>
+                    <input type="password" class="form-control" placeholder="Password" name='password' id="password" required="true">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                <br> 
+                <p style="margin: 0 auto;" class="text-center"> <a href="/forgot">Forgot Password </a> <p></p>
+                <p style="margin: 0 auto; display: inline;" class="text-center"> <a href="/"> Go Back</a> <p>
+            </div>
+        </form>
+</div>    
+
 
 <%- include('partials/footer.ejs') %>
