Some more changes to make it more responsive

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -22,7 +22,7 @@
                 
             <li>To moderate content, certain admin accounts will be created. They are meant for content moderation - so they cannot create any campground or add comments. </li> <br>
                 
-            <li>To prevent misrepresentation of someone's review by admin users, admin users are only granted permission to delete a review or restaurant. </li> <br>
+            <li>To prevent misrepresentation of someone's review by admin users, admin users are only granted permission to delete a review or restauran. </li> <br>
 
             <li>Users can also change their password in their profile page. </li><br>
 
