Do few final touch ups before
    - Add bootstrap to make site more responsive
    - Add a small description about the app in landing page
    - Add a .gitignore file inside folder
    - Add a readme(part 1)

--- a/chat-app/public/css/index.css
+++ b/chat-app/public/css/index.css
@@ -180,6 +180,11 @@ a {
 	width: 100%;
 }
 
+.about-text{
+	font: 200;
+	color: black;
+}
+
 @media (max-width: 700px) {
 	.chat-main {
 		display: block;
@@ -189,3 +194,4 @@ a {
 		display: none;
 	}
 }
+
