Include a button to about page from landing page. Make some grammar correction in about page.

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,7 +9,7 @@
                 
             <li>Each restaurant's page will contain page a sample photo, details, approx cost, location & details of owner. </li> <br>
 
-            <li>Each user will have a profile containing basic details (like Username, Profile picture, Email ,Bio etc) that can be accessed in their profile page. </li> <br>
+            <li>Each user will have a profile containing basic details (like Username, Profile picture, Email ,Bio etc) that can be accessed via their profile page. </li> <br>
 
             <li>Users can post a review with a rating (0 to 5) for each restaurant - an aggregate score of which will be displayed at the top.</li> <br>
 
@@ -20,7 +20,7 @@
                 </ul>
             </li>
                 
-            <li>To moderate content, certain admin accounts will be created. They are meant for content moderation - so they cannot create any campground or add comments. </li> <br>
+            <li>To moderate content, certain admin accounts will be created. They are meant for content moderation - so they cannot create any restaurants or add reviews. </li> <br>
                 
             <li>To prevent misrepresentation of someone's review by admin users, admin users are only granted permission to delete a review or restauran. </li> <br>
 
@@ -30,7 +30,7 @@
             
         </ul>
     </h5>
-    <h4> <strong> NOTE</strong>You can find more details about this project in my <a href="https://github.com/IamGroot19/Portfolio_Projects"> Github Page </a>.
+    <h4> <strong> NOTE</strong>: You can find more details about this project in my <a href="https://github.com/IamGroot19/Portfolio_Projects"> Github Page </a>.
     </h4>
 </div>
 <%- include('./partials/footer.ejs') %>
