--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -23,7 +23,8 @@
     
     <div id="landing-header">
  		<h1>Welcome to FoodCravings!</h1>
-		<a href="/campgrounds" class="btn btn-lg btn-success">View All Restaurants</a>
+        <a href="/campgrounds" class="btn btn-lg btn-success"> View All Restaurants </a> <br> <br>
+        <a href="/about" class="btn btn-lg btn-success"> About this website </a> 
     </div>
     
     <ul class="slideshow">
