Some more changes to make the website more responsive

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,8 +8,8 @@
 </form>
 -->
 
-<div class="container">
-    <h1 style="margin-left: 11.5em; margin-block-start: 2em ;"> LOGIN </h1>
+<div class="container text-center">
+    <h1 > LOGIN </h1>
     <br><br>
         <form action="/login" method="POST">
             <div style=" width:60%; margin: 0 auto;">
