--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,8 +17,8 @@
 </div>
 -->
 
-    <div class="container">
-    <h1 style="margin-left: 7.5em; margin-block-start: 2em ;"> CREATE YOUR ACCOUNT </h1><br><br>
+    <div class="container text-center">
+    <h1> CREATE YOUR ACCOUNT </h1><br><br>
     
          <form action="/register" method="POST">
             <div style=" width:60%; margin: 0 auto;">
