--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-    <div class="container">
+    <div class="container text-center">
         <!-- Just the jumbotron part-->
         <header class="jumbotron">
             <div class=="container">
