Few more resposivness related changes

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -30,5 +30,7 @@
             
         </ul>
     </h5>
+    <h4> <strong> NOTE</strong>You can find more details about this project in my <a href="https://github.com/IamGroot19/Portfolio_Projects"> Github Page </a>.
+    </h4>
 </div>
 <%- include('./partials/footer.ejs') %>
