--- a/views/campgrounds/editCamp.ejs
+++ b/views/campgrounds/editCamp.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header.ejs') %>
 
-<div class="container">
-    <h1 style="margin-left: 7.5em; margin-block-start: 2em ;"> Edit Existing Restaurant </h1><br><br>
+<div class="container text-center">
+    <h1> Edit Existing Restaurant </h1><br><br>
     
         <form action="/campgrounds/<%= camp._id %>?_method=PUT" method="POST">
             <div style=" width:60%; margin: 0 auto;">
