Few more very minor UI modifications (Changes placeholder text in .ejs file, replace yelcamp with foodcravings etc..). Add a readme file

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,11 +32,11 @@
                 </div>
                 <div class="form-group">
                     <label for="email"> Email-ID</label>
-                    <input type="text" class="form-control" placeholder="Last Name" name='email' id="email" required>
+                    <input type="text" class="form-control" placeholder="Email ID" name='email' id="email" required>
                 </div>
                 <div class="form-group">
                     <label for="username"> Username </label>
-                    <input type="text" class="form-control" placeholder="Last Name" name='username' id="username" required>
+                    <input type="text" class="form-control" placeholder="Username" name='username' id="username" required>
                 </div>
 
                 <div class="form-group">
@@ -45,13 +45,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="admincode"> Admin Code (For moderators only) </label>
-                    <input type="password" class="form-control" placeholder="Provided to you already" name='admincode' id="admincode" >
+                    <label for="admincode"> Admin Code (optional) </label>
+                    <input type="password" class="form-control" placeholder="(Only if you are a moderator)" name='admincode' id="admincode" >
                 </div>
 
                 <div class="form-group">
                     <label for="avatar"> Avatar </label>
-                    <input type="text" class="form-control" placeholder="Profile Picture URL (optional)" name='avatar' id="avatar" required>
+                    <input type="text" class="form-control" placeholder="Profile Picture URL (optional)" name='avatar' id="avatar">
                 </div>
                 <div class="form-group">
                     <label for="bio"> Bio </label>
